src/snapshots/tuzuku__insta__test_capture_stdout.snap
---
source: src/insta.rs
assertion_line: 58
expression: "String::from_utf8_lossy(&handler.stdout)"
---
600

