src/snapshots/tuzuku__insta__test_function_call_greet_chunk_print.snap
---
source: src/insta.rs
assertion_line: 28
expression: "String::from_utf8_lossy(&chunk_print)"
---
==== greet ====
 offset | line | opcode           | constants
 000000 | 0003 | OP_CONSTANT      | Hello
 000002 | 0003 | OP_PRINT         |
 000003 | 0004 | OP_GET_LOCAL     | 1
 000005 | 0004 | OP_PRINT         |
 000006 | 0005 | OP_POP           |
 000007 | 0005 | OP_NIL           |
 000008 | 0005 | OP_RETURN        |

