src/snapshots/tuzuku__insta__test_local_variable_bar_chunk_print.snap
---
source: src/insta.rs
assertion_line: 28
expression: "String::from_utf8_lossy(&chunk_print)"
---
==== bar ====
 offset | line | opcode           | constants
 000000 | 0010 | OP_NIL           |
 000001 | 0011 | OP_GET_LOCAL     | 1
 000003 | 0011 | OP_PRINT         |
 000004 | 0012 | OP_CONSTANT      | initialized
 000006 | 0012 | OP_SET_LOCAL     | 1
 000008 | 0013 | OP_GET_LOCAL     | 1
 000010 | 0013 | OP_PRINT         |
 000011 | 0014 | OP_POP           |
 000012 | 0014 | OP_NIL           |
 000013 | 0014 | OP_RETURN        |

