src/snapshots/tuzuku__insta__test_local_variable_stdout.snap
---
source: src/insta.rs
assertion_line: 41
expression: "String::from_utf8_lossy(&stdout)"
---
==== foo ====
 offset | line | opcode           | constants
 000000 | 0003 | OP_NIL           |
 000001 | 0003 | OP_CONSTANT      | 100
 000003 | 0003 | OP_SET_LOCAL     | 1
 000005 | 0004 | OP_GET_LOCAL     | 1
 000007 | 0004 | OP_PRINT         |
 000008 | 0005 | OP_CONSTANT      | foo
 000010 | 0005 | OP_SET_LOCAL     | 1
 000012 | 0006 | OP_GET_LOCAL     | 1
 000014 | 0006 | OP_PRINT         |
 000015 | 0007 | OP_POP           |
 000016 | 0007 | OP_NIL           |
 000017 | 0007 | OP_RETURN        |
100
foo
==== bar ====
 offset | line | opcode           | constants
 000000 | 0010 | OP_NIL           |
 000001 | 0011 | OP_GET_LOCAL     | 1
 000003 | 0011 | OP_PRINT         |
 000004 | 0012 | OP_CONSTANT      | initialized
 000006 | 0012 | OP_SET_LOCAL     | 1
 000008 | 0013 | OP_GET_LOCAL     | 1
 000010 | 0013 | OP_PRINT         |
 000011 | 0014 | OP_POP           |
 000012 | 0014 | OP_NIL           |
 000013 | 0014 | OP_RETURN        |
<nil>
initialized

